infra/k8s/aplicacao/produtoapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: produtoapi
  namespace: mcp-apis
  labels:
    mcp-apis/indexed: "true"
  annotations:
    mcp-apis/base-url: "http://produtoapi.mcp-apis.svc.cluster.local"
spec:
  selector:
    app: produtoapi
  ports:
    - port: 80
      targetPort: 8080
